--- a/index.html
+++ b/index.html
@@ -1,12 +1,351 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>project</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>project</title>
+  <script src="https://cdn.staticfile.org/vue/2.4.2/vue.min.js"></script>
+  <script src="https://cdn.staticfile.org/vue-router/2.7.0/vue-router.min.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+
+  <style>
+    .bounce-enter-active {
+      animation: bounce-in .5s;
+    }
+
+    .bounce-leave-active {
+      animation: bounce-in .5s reverse;
+    }
+
+    .class1 {
+
+      width: 400px;
+      height: 100px;
+      background: red;
+      font-size: 30px;
+      font-weight: 600;
+      font-style: italic;
+      color: green;
+      text-align: center;
+    }
+
+    @keyframes bounce-in {
+      0% {
+        transform: scale(0);
+      }
+
+      50% {
+        transform: scale(1.5);
+      }
+
+      100% {
+        transform: scale(1);
+      }
+    }
+  </style>
+</head>
+
+<body>
+  <div id="testApp">
+
+    <h1>你好啊:{{name}}</h1>
+    <div v-html="hemlTest"></div>
+
+    <label for="r1">修改颜色</label><input type="checkbox" v-model="use" id="r1">
+
+    <div v-bind:class="{'class1':use }">
+      b-bind指令
+
+
+    </div>
+    <p v-if="seen">现在你看到我了111</p>
+    <a v-bind:href='url'>去百度</a>
+    <p v-on:click="doSomething">点击试试</p>
+
+
+    <div v-if="Math.random() > 0.5">
+      大于0.5
+    </div>
+    <div v-else-if="Math.random() > 0.05">
+      大于0.05
+    </div>
+    <div v-else>
+      太小了
+    </div>
+
+
+    <div v-for="list in lists">
+
+      <div>{{list}} </div>
+
+      <div>---------</div>
+
+    </div>
+
+    <ul>
+
+      <li v-for="(value,key,index) in object">
+
+        <div> key:{{key}} , value:{{value}} </div>
+
+        <div>---------</div>
+
+      </li>
+
+    </ul>
+
+
+    <div v-for='i in 5'>
+
+      我是:{{i}}
+
+    </div>
+
+    <div>{{reverName}}</div>
+    <div>方法2{{reverName2()}}</div>
+    <div>
+
+      千米: <input type="text" v-model="km">
+      <br></br>
+      米: <input type="text" v-model="m">
+
+    </div>
+
+    <div @click="counter++">
+
+      <p>{{counter}}</p>
+
+    </div>
+
+
+    <input v-model="name" placeholder="编辑我……">
+    <p>消息是: {{ name }}</p>
+
+
+    <p>多个复选框：</p>
+    <input type="checkbox" id="runoob" value="Runoob" v-model="checkedNames">
+    <span>球？</span>
+    <label for="runoob">Runoob1</label>
+    <input type="checkbox" id="google" value="Google" v-model="checkedNames">
+    <label for="google">Google11</label>
+    <input type="checkbox" id="taobao" value="Taobao" v-model="checkedNames">
+    <label for="taobao">taobao111</label>
+    <p>
+      选中:{{checkedNames}}
+
+    </p>
+
+
+    <round v-on:addCount11='callAddCount'></round>
+
+    <round1 v-bind:name='name'></round1>
+
+    <button id='text' v-on:click='changeShow'>切换显示</button>
+
+    <transition name="bounce">
+      <p v-show="show" v-bind:style="styleobj">动画实例</p>
+    </transition>
+
+    <router-view></router-view>
+
+    <!-- 不写 v-bind 也可以，就像绑定别的属性一样 -->
+    <router-link :to="'foo'">Home</router-link>
+
+    <!-- 同上 -->
+    <router-link :to="{ path: 'foo' }">Home</router-link>
+
+    <!-- 命名的路由 -->
+    <router-link :to="{ name: 'hha', params: { userId: 123 }}">User</router-link>
+
+    <!-- 带查询参数，下面的结果为 /register?plan=private -->
+    <router-link :to="{ path: 'foo', query: { plan: 'private' }}">Register</router-link>
+
+
+  </div>
+
+
+
+
+
+
+
+  <script type="text/javascript">
+
+    Vue.component("round", {
+
+      template: '<div v-on:click="roundAdd">自定义组件 {{count}}</div>',
+      data: function () {
+
+        return {
+          count: 0
+        }
+
+      },
+      methods: {
+        roundAdd: function () {
+
+          this.count = this.count + 1;
+          this.$emit('addCount11', 10)
+
+          this.$emit('increment')
+
+          console.log("-----roundAdd-" + this.count)
+        },
+
+
+
+      }
+
+
+    })
+
+
+    var data = {
+      name: '小明',
+      checkedNames: [],
+      hemlTest: '<h1>我是一端html代码</h1>',
+      use: true,
+      seen: false,
+      show: true,
+      url: "https://www.baidu.com",
+      lists: [
+        "张三",
+        "张三111",
+        "张三222"
+      ],
+      counter: 0,
+      km: 0,
+      m: 0,
+      object: {
+        "name": "李雪华",
+        "age": 12,
+        "address": "江苏",
+      },
+      styleobj: {
+        fontSize: '30px',
+        color: 'red'
+      }
+
+
+    }
+
+    const Foo = { template: '<div style="color:red">foo</div>' }
+    const Bar = { template: '<div>bar</div>' }
+
+    const routes = [
+      { path: '/foo', component: Foo },
+      { path: '/bar', component: Bar }
+    ]
+
+    const router = new VueRouter({
+      routes // （缩写）相当于 routes: routes
+    })
+    var vm = new Vue(
+      {
+
+        el: '#testApp',
+        components: {
+
+          'round1': {
+
+
+            props: ['name'],
+
+            template: '<h1> 我是局部插件 名称是:{{name}}</h1>'
+
+          }
+        },
+
+        router: router,
+        data: data,
+        methods: {
+          doSomething: function () {
+            console.log("改变name")
+            vm.name = "咋了小子 ？"
+          },
+          reverName2: function () {
+            return data.name.split("").reverse().join(",")
+
+          },
+          callAddCount: function (value) {
+            data.name = value;
+            console.log("-----roundAdd111-")
+          },
+          changeShow: function () {
+            data.show = !data.show
+          }
+
+        },
+        computed: {
+          reverName: {
+            get: function () {
+              return data.name.split("").reverse().join(",111")
+
+            },
+            set: function (value) {
+
+
+              data.name = value
+
+            }
+
+          }
+
+        },
+        mounted() {
+
+          setTimeout(
+            function () {
+              axios
+                .get('http://10.179.25.254:8083')
+                .then(response => (console.log(response.data)))
+                .catch(function (error) { // 请求失败处理
+                  console.log(error);
+                });
+            }, 1000
+          )
+
+        },
+        watch: {
+          name: function (nval, oval) {
+            console.log('计数器值的变化111111111 :' + oval + ' 变为 ' + nval + '!');
+          },
+          km: function (val) {
+
+            data.km = val
+            data.m = val * 1000
+
+          },
+          m: function (val) {
+            data.km = val / 1000
+            data.m = val
+          }
+
+
+        }
+
+
+      }
+
+    )
+
+    vm.$watch('name', function (nval, oval) {
+      console.log('计数器值的变化 :' + oval + ' 变为 ' + nval + '!');
+    });
+
+
+    vm.reverName = "没任何问题"
+    document.write(vm.site === data.site)
+    // vm.name = "咋了老王?"
+
+
+  </script>
+
+
+
+
+</body>
+
 </html>
